force-app/main/default/objects/Case/fields/All_Parts_Fulfilled__c.field-meta.xml
<CustomField>
    <fullName>All_Parts_Fulfilled__c</fullName>
    <formula>Requested_Part_Count__c =  Fulfilled_Part_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All Parts Fulfilled</label>
    <type>Checkbox</type>
</CustomField>