force-app/main/default/objects/Case/fields/Fulfilled_Part_Count__c.field-meta.xml
<CustomField>
    <fullName>Fulfilled_Part_Count__c</fullName>
    <label>Fulfilled Part Count</label>
    <summaryFilterItems>
        <field>Part_Request__c.Fulfilled__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Part_Request__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>