force-app/main/default/objects/Case/fields/Requested_Part_Count__c.field-meta.xml
<CustomField>
    <fullName>Requested_Part_Count__c</fullName>
    <label>Requested Part Count</label>
    <summaryForeignKey>Part_Request__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>